@@ -319,6 +319,7 @@ regular expression.</p>
 <div class="section">
 <h1><a id="display" name="display">Display</a></h1>
 <p><strong>echo</strong> <em>&lt;string&gt;</em> -- echo the string to the screen.</p>
+<p><strong>info</strong> -- display information about the current page.</p>
 <p><strong>redirect_output</strong> <em>&lt;filename&gt;</em> -- append all twill output to the given file.</p>
 <p><strong>reset_output</strong> -- display all output to the screen.</p>
 <p><strong>save_html</strong> <em>[&lt;filename&gt;]</em> -- save the current page's HTML into a file.  If
